# ThermalPi

./: basic.py  main.py  picousbtc08.py  pyproject.toml
usbtc08/: usbtc08.py  usbtc08_logger.py  usbtc08_wrap.c
usbtc08/logs/: 20250228-161844-usbtc08_log.csv  20250228-162328-usbtc08_log.csv  20250228-162328-usbtc08_log.txt  20250228-172418-usbtc08_log.csv  20250228-172418-usbtc08_log.txt
