[tool.poetry]
name = "thermalpi"
version = "0.1.0"
description = ""
authors = ["Peter G <66267479+stonelips@users.noreply.github.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
